# mining

./: .gitignore  BENCHMARK.md  GEOMINE_AI.md  INVESTOR_DECK.md  ONE_PAGER.md  OVERVIEW.md  PHASE1_POSTMORTEM.md  PHASE2_PIVOT.md  STATUS.md  mineral_prediction_engine_v2.md  pyproject.toml  question.md  requirements-foundation.txt
configs/: great_dyke.yaml  great_dyke_aoi.geojson
data/geology/: macrostrat_units.json  zimbabwe_faults.geojson
data/outputs/: normalization_test.json  phase1_ml_results.json  signal_check.json  signal_check_full.json  spatial_stress_test.json
data/training/: deposits.geojson  deposits_curated.geojson  deposits_expanded.geojson  menabilly_classified.geojson
geomine/: __init__.py  cli.py
geomine/api/: __init__.py  main.py
geomine/audit/: __init__.py  core.py  report.py
geomine/ingest/: aster.py  mrds.py  sentinel2.py  srtm.py
geomine/predict/: inference.py
geomine/spectral/: __init__.py  compute.py  indices.py  visualize.py
geomine/structural/: __init__.py  lineaments.py  proximity.py  terrain.py
geomine/training/: sampling.py  spatial_cv.py  train.py
geomine/utils/: config.py  raster.py
notebooks/: prithvi_finetune_colab.ipynb
scripts/: compute_terrain.py  download_all.py  foundation_model_setup.py  prepare_prithvi_chips.py  process_and_check.py  run_prithvi_loto.py
