[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "geomine"
version = "0.1.0"
description = "Satellite-powered mineral prediction engine"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.11",
    "rasterio>=1.3",
    "rioxarray>=0.15",
    "xarray>=2023.1",
    "geopandas>=0.14",
    "shapely>=2.0",
    "fiona>=1.9",
    "pyproj>=3.6",
    "scikit-learn>=1.3",
    "xgboost>=2.0",
    "shap>=0.43",
    "matplotlib>=3.8",
    "pystac-client>=0.7",
    "requests>=2.31",
    "click>=8.1",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "jupyter>=1.0", "ipykernel>=6.25"]

[project.scripts]
geomine = "geomine.cli:main"

[tool.setuptools.packages.find]
include = ["geomine*"]
